nginx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: assignment
spec:
  parentRefs:
    - name: eg-gateway
  hostnames:
    - "web.company.local"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
